--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 * {
     margin: 0px;
-    padding: 0;
+    padding: 0px;
     box-sizing: border-box;
 }
 
@@ -82,7 +82,8 @@ header {
 .plans-details {
     display: flex;
     justify-content: space-between;
-    padding: 0 230px;
+    margin-left: 230px;
+    margin-right: 230px;
 }
 
 .plan-title {
@@ -97,6 +98,108 @@ header {
 
 }
 
-.plan-image{
+.plan-image {
     padding-bottom: 20px;
+}
+
+.gradient {
+    background-image: url(../images/watch.png), url(../images/gradient1.png);
+    background-repeat: no-repeat;
+    margin: 130px 240px 130px 220px;
+    width: 1140px;
+    height: 300px;
+    background-blend-mode: soft-light;
+}
+
+.gradient-title {
+    text-align: left;
+    color: #FFFFFF;
+    width: 459px;
+    height: 94px;
+    font-weight: 700;
+    font-size: 40px;
+    padding: 60px 0px 24px 64px;
+}
+
+.btn-call {
+    font-weight: 600;
+    font-size: 20px;
+    color: #005FAC;
+    border-radius: 5px;
+    border: none;
+    width: 160px;
+    height: 64px;
+    margin: 80px 916px 59px 64px;
+}
+
+/* footer */
+.footer {
+    display: flex;
+    background: #151414;
+    width: 1600px;
+    height: 577px;
+}
+
+.footer-title {
+    color: #F8F8F8;
+    margin-top: 130px;
+    margin-left: 230px;
+}
+
+.footer-description {
+    color: #F8F8F8;
+    margin-top: 16px;
+    margin-left: 230px;
+}
+
+.contact-email {
+    color: #F8F8F8;
+    margin-top: 24px;
+    margin-left: 230px;
+}
+
+.contact {
+    color: #F8F8F8;
+    margin-top: 16px;
+    margin-left: 230px;
+    margin-bottom: 32px;
+}
+
+.social-fb {
+    margin-left: 230px;
+    margin-right: 18px;
+}
+
+.social-tw {
+    margin-right: 18px;
+}
+
+.Subscribe {
+    color: #F8F8F8;
+    font-weight: 600;
+    font-size: 25px;
+    margin: 130px 431px 30px;
+}
+
+.mail {
+    background: #151414;
+    width: 325px;
+    height: 64px;
+    margin-left: 431px;
+    margin-right: 229px;
+    margin-bottom: 16px;
+    border: 1px solid #FFFFFF;
+    border-radius: 8px;
+    padding: 21px 158px 22px 21px;
+}
+
+.submit {
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 20px;
+    width: 170.11px;
+    height: 64px;
+    margin: 16px 383px 255px 431px;
+    background: #005FAC;
+    border-radius: 8px;
 }
