--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,10 +55,10 @@ header {
 }
 
 .template-title {
-    margin: 370px 400px 24px 0px;
-    padding: 0 40px 0 0;
     font-weight: 700;
     font-size: 40px;
+    margin: 370px 400px 24px 0px;
+    padding: 0 40px 0 0;
 }
 
 .template-description {
@@ -66,7 +66,12 @@ header {
     margin: 24px 500px 16px 0;
 }
 
-.list-item {}
+.list-item {
+    padding: 0 15px;
+}
+li{
+    padding: 5px 0;
+}
 
 /* plans */
 .plans {
@@ -105,10 +110,10 @@ header {
 .gradient {
     background-image: url(../images/watch.png), url(../images/gradient1.png);
     background-repeat: no-repeat;
+    background-blend-mode: soft-light;
     margin: 130px 240px 130px 220px;
     width: 1140px;
     height: 300px;
-    background-blend-mode: soft-light;
 }
 
 .gradient-title {
@@ -125,19 +130,19 @@ header {
     font-weight: 600;
     font-size: 20px;
     color: #005FAC;
+    margin: 80px 916px 59px 64px;
     border-radius: 5px;
     border: none;
     width: 160px;
     height: 64px;
-    margin: 80px 916px 59px 64px;
 }
 
 /* footer */
 .footer {
     display: flex;
-    background: #151414;
     width: 1600px;
     height: 577px;
+    background: #151414;
 }
 
 .footer-title {
